# weight-estimation

./: README.md  pyproject.toml
notebooks/example/: analysis.ipynb
notebooks/example/data/surf-code_d3_bZ_s1_n100000_r20/: circuit  detector_error_model
weight_estimation/estimator/: __init__.py  estimator.py  util.py
weight_estimation/util/: __init__.py  syndromes.py
