[tool.poetry]
name = "weight-estimation"
version = "0.1.0"
description = "Package that estimates the weights of the syndrome graph used a MWPM decoder."
authors = ["Boris Varbanov <b.m.varbanov@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "weight_estimation"}]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.11.0"
numpy = ">=1.18,<1.24"
numba = "^0.56.4"
xarray = "^2023.1.0"
pandas = "^1.5.3"
matplotlib = {version = "^3.6.3", optional = true}
seaborn = {version = "^0.12.2", optional = true}
jupyter = {version = "^1.0.0", optional = true}
ipykernel = {version = "^6.21.0", optional = true}
netcdf4 = "^1.6.2"

[tool.poetry.extras]
notebook = ["jupyter", "ipykernel"]
plotting = ["matplotlib", "seaborn"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.1.20"
flake8-import-order = "^0.18.2"
typeguard = "^2.13.3"
flake8-annotations = "^3.0.0"
flake8-docstrings = "^1.7.0"
sphinx = "^6.1.3"
sphinx-autodoc-typehints = "^1.21.8"
xdoctest = "^1.1.1"
darglint = "^1.8.1"
codecov = "^2.1.12"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
